--- a/Aula1_DataScience.ipynb
+++ b/Aula1_DataScience.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeJrmkAoI5wkjQMPfWn58i",
+      "authorship_tag": "ABX9TyM4nmIWhYk5P2iAdVk2hd19",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "0HWNkXUDHVpp"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Aula 1"
       ],
@@ -37,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "id": "Wf9ofCuUJ058"
       },
@@ -63,13 +70,13 @@
       "metadata": {
         "id": "LVoEiQExKJu1"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Informações iniciais acerca do dataset importado.**\n",
+        "# **Informações iniciais acerca do dataset importado.**\n",
         "\n",
         "---\n",
         "\n",
@@ -95,7 +102,7 @@
         "id": "a8VZQWGnKL_E",
         "outputId": "f6ecc7fb-0bf3-41c3-fc07-5bf92f4decd0"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +173,7 @@
         "id": "I7W3mxuvSi3r",
         "outputId": "41d4f276-7180-4890-bfab-31c6515ca097"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +548,7 @@
         },
         "outputId": "821c5ffc-e49f-4851-c4e1-341eeaf88f3e"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +715,7 @@
       "metadata": {
         "id": "uCEkXg_igTAF"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -750,7 +757,7 @@
       "metadata": {
         "id": "KNpPuQWPPotQ"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -847,7 +854,7 @@
         "id": "ZKDB93eiMPvR",
         "outputId": "19bb1d72-7b90-4adb-c40c-661999492a63"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1425,7 +1432,7 @@
         },
         "outputId": "3290ddb3-76ca-4c7c-ccfd-e01b01412bc4"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1647,7 +1654,7 @@
         "id": "txVECY8mznDK",
         "outputId": "72d8286c-cf39-41f6-c398-9a7cf119c126"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
