--- a/Alura_DataScience.ipynb
+++ b/Alura_DataScience.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOXoQ93hPjK4URlGTo5l1og",
+      "authorship_tag": "ABX9TyOYIq3IV+TSNrHz/+4ZpK4W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -553,7 +553,7 @@
       "metadata": {
         "id": "uCEkXg_igTAF"
       },
-      "execution_count": 13,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -595,7 +595,7 @@
       "metadata": {
         "id": "KNpPuQWPPotQ"
       },
-      "execution_count": 12,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -2882,9 +2882,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XeCUkAbRH0Th",
-        "outputId": "85201261-5650-4e9f-d345-1f155b5058f1"
+        "outputId": "8ba837cc-d52c-478b-b35c-106c56ffa9fc"
       },
-      "execution_count": 47,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -2906,92 +2906,19 @@
             "\n",
             "\n",
             "\n",
-            "Digite o número da operação: 5\n",
-            "Vamos Realizar o Preenchimento dos Valores Ausentes:\n",
-            "\n",
-            "Como Deseja Prosseguir?\n",
-            "\n",
-            "1 - Preencher Todos os Nulos com um Valor Específico\n",
-            "2 - Preencher Nulos de uma Coluna Específica\n",
-            "3 - Preencher Nulos Específico\n",
-            "4 - Preencher Nulos com a Mediana da Coluna\n",
-            "5 - Preencher Nulos com o Valor Mais Frequente (Moda)\n",
-            "6 - Preencher Nulos com o Valor da Linha Anterior (forward fill)\n",
-            "7 - Preencher Nulos com o Valor da Linha Seguinte (backward fill)\n",
-            "Digite o número da operação: 4\n",
-            "Antes da Alteração:\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 133349 entries, 0 to 133348\n",
-            "Data columns (total 11 columns):\n",
-            " #   Column              Non-Null Count   Dtype  \n",
-            "---  ------              --------------   -----  \n",
-            " 0   work_year           133339 non-null  float64\n",
-            " 1   experience_level    133349 non-null  object \n",
-            " 2   employment_type     133349 non-null  object \n",
-            " 3   job_title           133349 non-null  object \n",
-            " 4   salary              133349 non-null  int64  \n",
-            " 5   salary_currency     133349 non-null  object \n",
-            " 6   salary_in_usd       133349 non-null  int64  \n",
-            " 7   employee_residence  133349 non-null  object \n",
-            " 8   remote_ratio        133349 non-null  int64  \n",
-            " 9   company_location    133349 non-null  object \n",
-            " 10  company_size        133349 non-null  object \n",
-            "dtypes: float64(1), int64(3), object(7)\n",
-            "memory usage: 11.2+ MB\n",
-            "\n",
-            "Contagem de nulos por coluna:\n",
-            "work_year             10\n",
-            "experience_level       0\n",
-            "employment_type        0\n",
-            "job_title              0\n",
-            "salary                 0\n",
-            "salary_currency        0\n",
-            "salary_in_usd          0\n",
-            "employee_residence     0\n",
-            "remote_ratio           0\n",
-            "company_location       0\n",
-            "company_size           0\n",
-            "dtype: int64\n",
-            "\n",
-            "Porcentagem de nulos por coluna:\n",
-            "work_year             0.007499\n",
-            "experience_level      0.000000\n",
-            "employment_type       0.000000\n",
-            "job_title             0.000000\n",
-            "salary                0.000000\n",
-            "salary_currency       0.000000\n",
-            "salary_in_usd         0.000000\n",
-            "employee_residence    0.000000\n",
-            "remote_ratio          0.000000\n",
-            "company_location      0.000000\n",
-            "company_size          0.000000\n",
-            "dtype: float64\n",
-            "\n",
-            "Primeiras Linhas do DF:\n",
-            "Deseja continuar? (s/n): s\n",
-            "Qual coluna deseja preencher com a mediana? work_year\n",
-            "\n",
-            "Depois da Alteração:\n",
-            "   work_year experience_level employment_type           job_title  salary  \\\n",
-            "0     2025.0               SE              FT  Solutions Engineer  214000   \n",
-            "1     2025.0               SE              FT  Solutions Engineer  136000   \n",
-            "2     2025.0               MI              FT       Data Engineer  158800   \n",
-            "3     2025.0               MI              FT       Data Engineer  139200   \n",
-            "4     2025.0               EN              FT       Data Engineer   90000   \n",
-            "\n",
-            "  salary_currency  salary_in_usd employee_residence  remote_ratio  \\\n",
-            "0             USD         214000                 US           100   \n",
-            "1             USD         136000                 US           100   \n",
-            "2             USD         158800                 AU             0   \n",
-            "3             USD         139200                 AU             0   \n",
-            "4             USD          90000                 US             0   \n",
-            "\n",
-            "  company_location company_size  \n",
-            "0               US            M  \n",
-            "1               US            M  \n",
-            "2               AU            M  \n",
-            "3               AU            M  \n",
-            "4               US            M  \n"
+            "Digite o número da operação: 3\n",
+            "Ano                10\n",
+            "Nível               0\n",
+            "Contrato            0\n",
+            "Cargo               0\n",
+            "Salário (local)     0\n",
+            "Moeda               0\n",
+            "Salário (USD)       0\n",
+            "Residência          0\n",
+            "Remoto (%)          0\n",
+            "Local Empresa       0\n",
+            "Tamanho             0\n",
+            "dtype: int64\n"
           ]
         }
       ]
@@ -3017,11 +2944,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Nova seção"
+        "# Aula 4"
       ],
       "metadata": {
         "id": "V-A2PJ5iCLZt"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "V5q08Nf9GSOj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
